# multi-modal-rag

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  embedder.py  ingestion.py  llm_chain.py  main.py  pyproject.toml
.github/workflows/: build.yml  docker.yml
documents/: sample_document.txt
reference/: DEVELOPER_REFERENCE.md
scripts/: build.ps1  build.sh  build.spec  create-release.ps1  package.ps1  package.sh
scripts/hooks/: hook-magika.py
src/: config.py
src/multi_modal_rag/: embedder.py  ingestion.py  llm_chain.py  main.py  vector_store.py
src/utils/: logger.py
