[project]
name = "multi-modal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-aiplatform>=1.138.0",
    "google-cloud-speech>=2.36.1",
    "google-genai>=1.64.0",
    "google-generativeai>=0.8.6",
    "markitdown[all]>=0.1.5",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.1",
]

[project.scripts]
multi-modal-rag = "multi_modal_rag.main:main"

[tool.uv]
package = true
